--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <script type="text/javascript">
        
           var map = L.map('map', {
-              center: [36.0627461,103.3171649],
+              center: [31.712029,111.6426445],
               zoom: 6
           });
           L.tileLayer('https://{s}.tile-cyclosm.openstreetmap.fr/cyclosm/{z}/{x}/{y}.png', {
