--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <script type="text/javascript">
        
           var map = L.map('map', {
-              center: [31.712029,111.6426445],
-              zoom: 6
+              center: [30.9722344,111.0676619],
+              zoom: 5
           });
           L.tileLayer('https://{s}.tile-cyclosm.openstreetmap.fr/cyclosm/{z}/{x}/{y}.png', {
                attribution: '© OpenStreetMap',
