--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
             var pic03 = '<img src="https://github.com/calabashhh/JourneytotheWest/blob/main/Yenshueifestivities.jpg?raw=true" alt="YanShui Firework Festival" width="300">';
             var pic04 = '<img src="https://github.com/calabashhh/JourneytotheWest/blob/main/ShanghaiShikumenbalcony.JPG?raw=true" alt="Shanghai Shikumen balcony" width="300">';
             var pic05 = '<img src="https://github.com/calabashhh/JourneytotheWest/blob/main/TaishanOfferings.jpg?raw=true" alt="Mt Taishan Offerings" width="300">';
-            var pic06 = '<img src="https://https://github.com/calabashhh/JourneytotheWest/blob/main/KaifengGhostMarket.jpg?raw=true" alt="Kaifeng Ghost Market" width="300">';
-            var pic07 = '<img src="https://https://github.com/calabashhh/JourneytotheWest/blob/main/GongyiSongling.jpg?raw=true" alt="Gongyi Song Dynasty Imperial Tombs" width="300">';
-            var pic08 = '<img src="https://https://github.com/calabashhh/JourneytotheWest/blob/main/Zhengzhou2007.jpg?raw=true" alt="Zhengzhou Streetscape" width="300">';
-            var pic09 = '<img src="https://https://github.com/calabashhh/JourneytotheWest/blob/main/KaifengStreetFood.jpg?raw=true" alt="Kaifeng Street Food" width="300">';
-            var pic10 = '<img src="https://https://github.com/calabashhh/JourneytotheWest/blob/main/Shanghai1930sShikumen.JPG?raw=true" alt="Shanghai 1930s Shikumen" width="300">';
-            var pic11 = '<img src="https://https://github.com/calabashhh/JourneytotheWest/blob/main/ShangahiArtDeco.JPG?raw=true" alt="Shanghai Art Deco" width="300">';
+            var pic06 = '<img src="https://github.com/calabashhh/JourneytotheWest/blob/main/KaifengGhostMarket.jpg?raw=true" alt="Kaifeng Ghost Market" width="300">';
+            var pic07 = '<img src="https://github.com/calabashhh/JourneytotheWest/blob/main/GongyiSongling.jpg?raw=true" alt="Gongyi Song Dynasty Imperial Tombs" width="300">';
+            var pic08 = '<img src="https://github.com/calabashhh/JourneytotheWest/blob/main/Zhengzhou2007.jpg?raw=true" alt="Zhengzhou Streetscape" width="300">';
+            var pic09 = '<img src="https://github.com/calabashhh/JourneytotheWest/blob/main/KaifengStreetFood.jpg?raw=true" alt="Kaifeng Street Food" width="300">';
+            var pic10 = '<img src="https://github.com/calabashhh/JourneytotheWest/blob/main/Shanghai1930sShikumen.JPG?raw=true" alt="Shanghai 1930s Shikumen" width="300">';
+            var pic11 = '<img src="https://github.com/calabashhh/JourneytotheWest/blob/main/ShangahiArtDeco.JPG?raw=true" alt="Shanghai Art Deco" width="300">';
             
           
           marker01.bindPopup('<p style="color:blue; font-weight:bold"> Matisi, Gansu </p>' + pic01);
